--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=Kotlin.SpringbootV2
+server.port=8080
+spring.datasource.url=jdbc:postgresql://localhost:5432/OrderData
+spring.datasource.username=postgres
+spring.datasource.password=12345
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+server-welcome-message=Hello from Spring Boot!
+spring.jpa.hibernate.ddl-auto=update
