--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=12345
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 server-welcome-message=Hello from Spring Boot!
 spring.jpa.hibernate.ddl-auto=update
+springdoc.api-docs.path=/api-docs
